Fix extra space in mobile version

--- a/media.css
+++ b/media.css
@@ -199,8 +199,8 @@
 
 @media screen and (min-width: 300px) and (max-width: 880px) { 
     html, body {
-        width: 100%;
-        overflow-x: hidden;
+        width: 100% !important;
+        overflow-x: hidden !important; 
     }
 }
 
